--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://thenounproject.com/icon/permalink-219233/" />
+		<link rel="icon" href="images/favicon.ico" />
+		<title>Beyond Words</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
